unpackaged/main/default/objects/Video_View__c/Video_View__c.object-meta.xml
<CustomObject>
    <label>Video View</label>
    <nameField>
        <displayFormat>VV-{000000}</displayFormat>
        <label>Video Views Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Video Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>