unpackaged/main/default/objects/Video_View__c/fields/Event_1__c.field-meta.xml
<CustomField>
    <fullName>Event_1__c</fullName>
    <label>Event 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>