unpackaged/main/default/objects/Video_View__c/fields/Event_2__c.field-meta.xml
<CustomField>
    <fullName>Event_2__c</fullName>
    <label>Event 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>