unpackaged/main/default/objects/Video_View__c/fields/Event_3__c.field-meta.xml
<CustomField>
    <fullName>Event_3__c</fullName>
    <label>Event 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>