unpackaged/main/default/objects/Video_View__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Video Views</relationshipLabel>
    <relationshipName>Video_Views</relationshipName>
    <type>Lookup</type>
</CustomField>