unpackaged/main/default/objects/Video_View__c/fields/Metric_1__c.field-meta.xml
<CustomField>
    <fullName>Metric_1__c</fullName>
    <label>Metric 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>