unpackaged/main/default/objects/Video_View__c/fields/Metric_2__c.field-meta.xml
<CustomField>
    <fullName>Metric_2__c</fullName>
    <label>Metric 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>