unpackaged/main/default/objects/Video_View__c/fields/Metric_3__c.field-meta.xml
<CustomField>
    <fullName>Metric_3__c</fullName>
    <label>Metric 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>