unpackaged/main/default/objects/Video_View__c/fields/Player_Id__c.field-meta.xml
<CustomField>
    <fullName>Player_Id__c</fullName>
    <label>Player Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>