unpackaged/main/default/objects/Video_View__c/fields/Time_Watched__c.field-meta.xml
<CustomField>
    <fullName>Time_Watched__c</fullName>
    <label>Time Watched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>