unpackaged/main/default/objects/Video_View__c/fields/Video_Name__c.field-meta.xml
<CustomField>
    <fullName>Video_Name__c</fullName>
    <label>Video Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>