unpackaged/main/default/objects/Video_View__c/fields/Watched_Percent__c.field-meta.xml
<CustomField>
    <fullName>Watched_Percent__c</fullName>
    <label>Watched Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>