unpackaged/main/default/objects/Video_View__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Created_At__c</columns>
    <columns>Video_Name__c</columns>
    <columns>Watched_Percent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>